--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,3 +43,6 @@ jobs:
         run: |
           forge test -vvv
         id: test
+
+      - name: Run Aderyn static analysis
+        uses: fmorisan/aderyn-action@v0.0.1
